--- a/all-ways-egpu-boot-vga.service
+++ b/all-ways-egpu-boot-vga.service
@@ -4,7 +4,7 @@ After=display-manager.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/all-ways-egpu set-boot-vga egpu
+ExecStart=all-ways-egpu set-boot-vga egpu
 
 [Install]
 WantedBy=graphical.target
