Setup and boot fixes
Fixes the setup when there is a non-zero PCIe domain and additional fixes to the boot function.

--- a/all-ways-egpu.service
+++ b/all-ways-egpu.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Configure eGPU as primary under Wayland desktops
 Before=display-manager.service
+After=bolt.service
 
 [Service]
 Type=simple
