Start service after bolt.service
Start Method 2 and 3 services after bolt.service to make sure eGPU is recognized before trying to set as primary

--- a/systemd/all-ways-egpu-set-compositor.service
+++ b/systemd/all-ways-egpu-set-compositor.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Configure eGPU as primary using compositor variables under Wayland desktops
-After=display-manager.service
+After=display-manager.service bolt.service
 
 [Service]
 Type=simple
