Update systemd service
Update service files type and ordering.

--- a/systemd/all-ways-egpu.service
+++ b/systemd/all-ways-egpu.service
@@ -4,7 +4,7 @@ Before=display-manager.service
 After=bolt.service
 
 [Service]
-Type=simple
+Type=oneshot
 ExecStart=all-ways-egpu boot
 
 [Install]
