--- a/systemd/all-ways-egpu-set-compositor.service
+++ b/systemd/all-ways-egpu-set-compositor.service
@@ -1,9 +1,10 @@
 [Unit]
 Description=Configure eGPU as primary using compositor variables under Wayland desktops
-After=display-manager.service bolt.service
+Before=display-manager.service
+After=bolt.service
 
 [Service]
-Type=simple
+Type=oneshot
 ExecStart=all-ways-egpu set-compositor-primary egpu
 
 [Install]
