--- a/systemd/all-ways-egpu-boot-vga.service
+++ b/systemd/all-ways-egpu-boot-vga.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=Configure eGPU as primary using boot_vga under Wayland desktops
-Before=display-manager.service
-After=bolt.service
+After=display-manager.service bolt.service
 
 [Service]
 Type=oneshot
