Added entry point script
Add all-ways-egpu-entry.sh to allow custom commands before and after the switching is done

--- a/systemd/all-ways-egpu-boot-vga.service
+++ b/systemd/all-ways-egpu-boot-vga.service
@@ -4,7 +4,7 @@ After=display-manager.service bolt.service
 
 [Service]
 Type=oneshot
-ExecStart=all-ways-egpu set-boot-vga egpu
+ExecStart=all-ways-egpu-entry.sh set-boot-vga egpu
 
 [Install]
 WantedBy=graphical.target
