--- a/systemd/all-ways-egpu-boot-vga.service
+++ b/systemd/all-ways-egpu-boot-vga.service
@@ -5,7 +5,7 @@ After=bolt.service dbus.service
 
 [Service]
 Type=oneshot
-ExecStart=all-ways-egpu-entry.sh set-boot-vga egpu
+ExecStart=all-ways-egpu-entry.sh set-boot-vga
 
 [Install]
 WantedBy=multi-user.target
